--- a/public/cars.html
+++ b/public/cars.html
@@ -147,7 +147,7 @@
 
         <div class="w-56">
           <label class="mb-2 block text-sm">Jumlah Penumpang (Optional)</label>
-          <input type="number" class="h-12 w-full border rounded-lg text-sm" id="passanger" />
+          <input type="number" class="h-12 w-full border rounded-lg text-sm" id="passenger" />
         </div>
 
         <button type="submit" class="h-[36px] w-[92px] bg-green-600 hover:bg-green-900 text-white font-bold rounded text-sm md:my-10 my-2" id="load-btn">Cari Mobil</button>
