--- a/public/cars.html
+++ b/public/cars.html
@@ -147,10 +147,10 @@
 
         <div class="w-56">
           <label class="mb-2 block text-sm">Jumlah Penumpang (Optional)</label>
+
           <input type="number" class="h-12 w-full border rounded-lg text-sm" id="passenger" />
         </div>
-
-        <button type="submit" class="h-[36px] w-[92px] bg-green-600 hover:bg-green-900 text-white font-bold rounded text-sm md:my-10 my-2" id="load-btn">Cari Mobil</button>
+        <button type="submit" id="load-btn" class="h-[36px] w-[92px] bg-green-600 hover:bg-green-900 text-white font-bold rounded text-sm md:my-10 my-2">Cari Mobil</button>
       </div>
     </section>
     <!-- /FilterCar -->
@@ -195,5 +195,8 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="./scripts/scripts.js"></script>
+    <script>
+      // document.getElementById("coba").onclick = console.log("MANTAP");
+    </script>
   </body>
 </html>
